--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --timeout 0"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "mocha": "^6.0.2"
   },
   "dependencies": {
+    "js-beautify": "^1.9.1",
     "js-levenshtein": "^1.1.6"
   }
 }
